# secure-password-generator

./: .gitignore  LICENSE  README.md  SecurePasswordGenerator.spec  example_output.txt  gui.py  index.html  main.spec  password_generator.py  pyproject.toml
.github/workflows/: build.yml
app/: gui.py  main.py
app/assets/: icon.icns
password_generator/: cli.py  core.py  gui.py
secure_password_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
